-> style.css: minor changes and fix to prevent default browser calendar appearing -> events.html: added autofocus property and also included mobile/desktop date controls -> index.html: added autofocus property and also included mobile/desktop date controls -> addEvent.js: added logic to handle different mobile and desktop date controls -> events.js: logic for autofocus -> login.js: logic for autofocus -> register.js: added logic to handle different mobile and desktop date controls -> validation.js: added visible property to ensure that the relevant controls would validate

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,7 +39,7 @@ p {
 		top: 0;
 	}
 	
-	/* Vlad Golubev 8 months @phongphan117 apply style="margin: 0 auto;" to the .card Look, is it a desired result? http://jsfiddle.net/Lovb305L/ http://www.gitterforum.com/discussion/dogfalo-materialize?page=729 */
+	/* Vlad Golubev 8 months @phongphan117 apply style="margin: 0 auto;" to the .card Look, is it a desired result? http://www.gitterforum.com/discussion/dogfalo-materialize?page=729 */
 	.card-panel.hoverable {
 		width: 100%; 
 		margin: 0 auto;
@@ -87,7 +87,7 @@ label.active {
 		bottom: 20px;
 	}
   
-	/* Vlad Golubev 8 months @phongphan117 apply style="margin: 0 auto;" to the .card Look, is it a desired result? http://jsfiddle.net/Lovb305L/ http://www.gitterforum.com/discussion/dogfalo-materialize?page=729 */
+	/* Vlad Golubev 8 months @phongphan117 apply style="margin: 0 auto;" to the .card Look, is it a desired result?  http://www.gitterforum.com/discussion/dogfalo-materialize?page=729 */
 	.card-panel.hoverable {
 		width: 80%;
 		margin: 0 auto;
@@ -122,13 +122,30 @@ label.active {
 		bottom: 20px;
 	}
   
-	/* Vlad Golubev 8 months @phongphan117 apply style="margin: 0 auto;" to the .card Look, is it a desired result? http://jsfiddle.net/Lovb305L/ http://www.gitterforum.com/discussion/dogfalo-materialize?page=729 */
+	/* Vlad Golubev 8 months @phongphan117 apply style="margin: 0 auto;" to the .card Look, is it a desired result? http://www.gitterforum.com/discussion/dogfalo-materialize?page=729 */
 	.card-panel.hoverable {
-		width: 80%;
+		width: 90%;
 		margin: 0 auto;
 	}
 }
 
 nav, .cardContainer {
 	opacity: 0.8;
+}
+
+/* Fix to remove default calendar on datetime controls: http://stackoverflow.com/questions/11418289/remove-background-arrow-from-date-input-in-google-chrome-v20 - answered by @jfrej */
+::-webkit-inner-spin-button,
+::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
+
+input[type="date"]::-webkit-input-placeholder{ 
+    visibility: hidden !important;
+}
+
+::-webkit-datetime-edit-year-field:not([aria-valuenow]),
+::-webkit-datetime-edit-month-field:not([aria-valuenow]),
+::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
+    color: transparent;
 }
